<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cards Of Discord</string>
    <string name="cards">Cards</string>
    <string name="of">of</string>
    <string name="discord">Discord</string>
    <string name="harmony">Harmony</string>
    <string name="descr_overflow_button">Menu</string>
    <string name="change_name">Change Name</string>
    <string name="legal">Legal</string>
    <string name="adapted_for_android">Adapted for Android by Teddy Sterne and Jordan Moore</string>
    <string name="how_to_play">How to Play</string>
    <string name="online_game">Online Game</string>
    <string name="pass_and_play">Pass and Play</string>
    <string name="lan_game">LAN Game</string>
    <string name="title_activity_enter_names">EnterNamesActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="player_name">Player Name</string>
    <string name="add_player">+ Add Player</string>
    <string name="start_game">Start Game!</string>
    <string name="enter_player_names">Enter Player Names</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hand_the_device">Hand the device to %1$s</string>
    <string name="username">Username</string>
    <string name="set_name">Set Name</string>
    <string name="remove_player">Remove Player</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="action_settings">Settings</string>
    <string name="max_players">There is a maximum of %1$d players per game</string>
    <string name="player_names_not_blank">Player names cannot be blank</string>
    <string name="player_names_unique">Player names must be unique</string>
    <string name="black_card_text">Black Card Text</string>
    <string name="favorite_food_truck">My favorite food truck is _____.</string>
    <string name="new_game">New Game</string>
    <string name="main_menu">Main Menu</string>
    <string name="switch_to_mode">Switch to Mode</string>
    <string name="title_activity_bluetooth_lan">BluetoothLanActivity</string>

</resources>
