<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                tools:context="${relativePackage}.${activityClass}">

    <edu.rosehulman.csse.cardsofdiscord.MainTitleView
            android:id="@+id/title_layout"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />

    <Button
            android:id="@+id/pnp_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:text="@string/pass_and_play"/>

    <Button
            android:id="@+id/lan_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/pnp_button"
            android:layout_alignLeft="@+id/pnp_button"
            android:layout_alignRight="@+id/pnp_button"
            android:layout_marginTop="16dp"
            android:text="@string/lan_game"/>

    <Button
            android:id="@+id/online_game_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/lan_button"
            android:layout_alignLeft="@+id/pnp_button"
            android:layout_alignRight="@+id/pnp_button"
            android:layout_marginTop="16dp"
            android:text="@string/online_game"/>
    
    <Button
            android:id="@+id/how_play_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/online_game_button"
            android:layout_alignLeft="@+id/pnp_button"
            android:layout_alignRight="@+id/pnp_button"
            android:layout_marginTop="16dp"
            android:text="@string/how_to_play"/>

    <ImageButton
            android:id="@+id/main_menu_menu_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:background="@null"
            android:contentDescription="@string/descr_overflow_button"
            android:src="@drawable/ic_action_overflow"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/adapted_for_android" />

    <edu.rosehulman.csse.cardsofdiscord.CircleView
        android:id="@+id/circleView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView1"
        android:layout_marginBottom="99dp" >
    </edu.rosehulman.csse.cardsofdiscord.CircleView>

</RelativeLayout>