<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="60dp"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        style="@style/WhiteText"
        android:textSize="18sp"
        android:text="@string/enter_player_names" />

    <LinearLayout
        android:id="@+id/names_list_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_below="@+id/textView1"
        android:orientation="vertical" >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/player_name"
            android:ems="10" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/player_name"
            android:ems="10" />
        
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/player_name"
            android:ems="10" />
        
    </LinearLayout>

    <Button
        android:id="@+id/add_player_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/names_list_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/add_player" />
    
    <Button
        android:id="@+id/start_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/add_player_button"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="80dp"
        android:text="@string/start_game" />


</RelativeLayout>